# _Crypto_Bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ANSIBLE_INVENTORY_EXAMPLE.ini  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT_STATUS.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_READY.md  Makefile  PHASE3_COMPLETE.md  QUICKSTART_DEPLOYMENT.md  QUICK_START.md  README.md  README_DEPLOYMENT.md  RF_COMPLETION_CHECKLIST.md  SAUVEGARDES.md  SCHEMAS.HTML  SECURITY_AUDIT.md  SETUP.md  VPS_DEPLOYMENT_GUIDE.md  _bmad-output  alembic.ini  audit.md  cdc.md  db_analyse.ipynb  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  logger_settings.py  main.py  mlflow-local.db  ntbk_analytics.ipynb  ntbk_ml_baseline.ipynb  ntbk_ml_feature_engineering.ipynb  ntbk_test_analytics.ipynb  ntbk_test_exchanges_final.ipynb  (+11 more)
.bmad/: brainstorm.md
.claude/: CLAUDE.md  settings.json
.claude.cc/agents/: backend-engineer.md  data-engineer.md  devops-engineer.md  frontend-engineer.md  ml-engineer.md
.claude.cc/commands/: backend.md  data-engineering.md  db-migrate.md  deploy.md  devops.md  frontend.md  lint.md  ml.md  python.md  test.md
.claude.cc/rules/: backend.md  data-engineering.md  ml.md
.claude/agents/: crypto.md  orchestrator.md  python-ml.md
.claude/commands/: backtest.md
.claude/hooks/: python-ruff-format.js  session-summary.js
.claude/rules/: devops.md  frontend.md  python.md
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  collector.yml  deploy.yml  tests.yml
_bmad/: _config  bmm  core
_bmad-output/implementation-artifacts/: 1-1-provisionner-le-socle-hote-durci.md  1-2-garantir-idempotence-et-execution-par-tags.md  1-3-activer-un-acces-administration-vpn-first.md  1-4-initialiser-la-gestion-des-secrets-chiffres.md  2-1-installer-k3s-mono-noeud-version-epinglee.md  2-2-bootstrap-argo-cd-en-app-of-apps.md  2-3-mettre-en-place-derive-et-rollback.md  2-4-appliquer-les-gates-ci-de-qualite.md  3-1-deployer-metriques-et-dashboards-de-base.md  3-2-configurer-alertes-email-actionnables.md  3-3-exposer-statuts-ops-et-contrat-d-erreur.md  4-1-deployer-postgresql-persistant.md  4-2-restreindre-l-acces-db-au-reseau-prive.md  4-3-valider-durabilite-donnees-et-monitoring-db.md  5-1-mettre-en-place-backups-planifies-avec-retention.md  5-2-executer-un-restore-drill-mesure.md  5-3-structurer-gouvernance-et-piste-d-audit.md  5-4-publier-la-documentation-ops-et-matrice-de-validation.md  parallel-delivery-plan-2026-02-10.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-02-10.md  prd.md  product-brief-k3s-mono-pgsql-2026-02-10.md  test-design-k3s-mono-pgsql-2026-02-10.md
_v1/: _all-diagrams.md
_v1/infra/: README.md
api/: Dockerfile  README.md  dependencies.py  main.py
api/routers/: alerts.py  health.py  market.py  ml.py  news.py  ohlcv.py  paper_trading.py  signals.py
api/schemas/: alerts.py  market.py  ml.py  news.py  ohlcv.py  paper_trading.py  signals.py
bmad/: config.yaml
collector/: Dockerfile
config/: config.yaml  settings.py
data/processed/: crypto_data.db
docs/: 00-overview.md  03-backend-api.md  05-devops-infra.md  06-https-setup.md  06-roadmap.md  07-database-migrations.md  07-paper-trading-and-alerts.md  10-ci-cd-secrets.md  1803-audit-prod.md  CICD-STRATEGY.md  DATA_SOURCES_ROADMAP.md  ENVIRONMENTS.md  PRODUCTION_RUNBOOK.md  README.md  SCHEMAS.HTML  SCRAPING_ARCHITECTURE.md  api.md  bmm-workflow-status.yaml  data_collection.md  database_schema.md  frontend.md  installation.md  ml.md  paper_trading_spec.md  rapport_final.md  skills-ln-inventory.md
docs/audit/: CDC.md
docs/diagrams/: AC01-etl-pipeline.puml  AC02-signal-lifecycle.puml  C01-architecture-macro.puml  C02-etl-components.puml  C03-ml-components.puml  C04-api-components.puml  C05-frontend-components.puml  C06-phase2-ml-pipeline.puml  C07-phase2-features.puml  CL01-pydantic-models.puml  CL02-orm-models.puml  CL03-api-schemas.puml  CL04-ml-rules-models.puml  CL05-exceptions.puml  DIAGRAMS.md  DP01-docker-infrastructure.puml  ER01-database-schema.puml  README.md  SQ01-auth-jwt-flow.puml  SQ02-dashboard-request.puml  SQ03-signal-generation.puml  SQ04-chat-llm-flow.puml  ST01-signal-states.puml  UC01-personas.puml  _all-diagrams.md  _common.puml  v2-architecture.md
docs/equipes/: 01-data-engineering.md  02-ml-data-science.md
docs/existant/: 05-frontend-ui.md  07-glossaire.md
docs/migrations/: migration-feasibility.md
docs/planning/: 06-sprint-plan.md  06a-sprint-gantt-tracking.md
docs/specs/: ADRs-phase2.md  PRD-phase2.md  data-sources-quickstart.md  ux-design-nouvelles-features.md
documentation/: SAUVEGARDES.md
final/: besoin.md  handoff-solo-dev.md
frontend/: Dockerfile  api_client.py  app.py  config.py  utils.py
frontend/components/: candlestick.py  (+2 more)
infra/: README.md
livraison-audit/: 09-rate-limiting.md  PHASE1_COMPLETION.md  PHASE2_IMPLEMENTATION.md  PHASE3_PLAN.md  vague.md
mlflow/: Dockerfile
notebooks/: db_analyse.ipynb
prompt/: prompt-pgsql-ha-prom-graf.md  prompt.md
ressources_projet/: CRYPTOBOT_RESSOURCES.xlsx
scripts/: analyze_database.py  backup-db.sh  backup_db.py  check_db.py  collect_news.py  deploy.sh  fetch_history.py  generate_config.py  manage_environments.py  migrate_to_postgres.py  reset_database.py  reset_db.py  restore_db.py  run_tests.py  schedule_backups.py  seed_db.py  setup_environments.py  test_alerts.py  test_live_sqlite.py  test_main.py  test_nlp.py
src/: cli.py  scheduler.py
tests/: README.md  conftest.py  test_api.py  test_backtester.py  test_baseline.py  test_data_validator.py  test_dataset_builder.py  test_etl_extractor.py  test_etl_loader.py  test_etl_pipeline.py  test_etl_transformer.py  test_evaluator.py  test_fear_greed_collector.py  test_feature_builder.py  test_frontend_api_client.py  test_frontend_components.py  test_frontend_utils.py  test_market_collector.py  test_news_collector.py  test_ohlcv_collector.py  test_paper_trading.py  test_ticker_service.py
vault/: _index.md
(+435 files in other folders)
