[project]
name = "crypto-bot"
version = "1.0.0"
requires-python = ">=3.11"

# Base dependencies (shared across all services)
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "email-validator>=2.1.0,<3.0",
    "sqlalchemy[asyncio]>=2.0.30,<3.0",
    "asyncpg>=0.29.0,<1.0",
    "httpx>=0.27.0,<1.0",
]

[project.optional-dependencies]
etl = [
    "apscheduler>=3.10.0,<4.0",
    "alembic>=1.13.0,<2.0",
    "minio>=7.2.0,<8.0",
    "pandas>=2.1.0,<3.0",
    "numpy>=1.26.0,<3.0",
    "pyarrow>=14.0,<18.0",
    "ccxt>=4.3.0,<5.0",
    "feedparser>=6.0.0,<7.0",
    "aiohttp>=3.9.0,<4.0",
    "beautifulsoup4>=4.12.0,<5.0",
]
api = [
    "fastapi>=0.111.0,<1.0",
    "uvicorn[standard]>=0.29.0,<1.0",
    "alembic>=1.13.0,<2.0",
    "python-jose[cryptography]>=3.3.0,<4.0",
    "bcrypt>=4.0.0,<5.0",
    "prometheus-fastapi-instrumentator>=6.1.0,<7.0",
]
frontend = [
    "streamlit>=1.35.0,<2.0",
    "plotly>=5.22.0,<6.0",
    "pandas>=2.1.0,<3.0",
]
ml = [
    "mlflow>=2.10,<3.0",
    "boto3>=1.34.0,<2.0",
    "scikit-learn>=1.4,<2.0",
    "xgboost>=2.0,<3.0",
    "lightgbm>=4.3,<5.0",
    "pandas>=2.1,<3.0",
    "numpy>=1.26,<3.0",
    "pyyaml>=6.0,<7.0",
    "joblib>=1.3,<2.0",
    "apscheduler>=3.10.0,<4.0",
    "textblob>=0.18.0,<1.0",
]
mlflow-server = [
    "mlflow>=2.10,<3.0",
    "boto3>=1.34.0,<2.0",
    "psycopg2-binary>=2.9.0,<3.0",
]
llm = [
    "openai>=1.30.0",
    "anthropic>=0.28.0",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21.0",
    "pytest-mock>=3.14.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.4.0",
    "aiosqlite>=0.20.0",
]
all = [
    "crypto-bot[etl,api,frontend,ml,llm]",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print (no print statements)
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # Depends() in function defaults — standard FastAPI pattern
    "S101",   # assert used for type narrowing in ML code
]

[tool.ruff.lint.per-file-ignores]
"src/shared/config.py" = ["S104", "S105"]  # dev defaults for config
"src/api/schemas.py" = ["S105"]  # token_type = "bearer" is not a password
"src/frontend/pages/*.py" = ["E402"]  # Streamlit requires st.set_page_config() before imports
"src/frontend/app.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/__init__.py",
    "src/frontend/pages/*",
    "src/frontend/app.py",
    "src/etl/main.py",
    "src/etl/jobs.py",
    "src/ml/models/trainer.py",
    "src/ml/models/predictor.py",
    "src/ml/models/feature_builder.py",
    "src/ml/models/feature_engineering.py",
    "src/ml/mlflow_utils.py",
    "src/ml/backtesting/*",
    "src/ml/repositories/timescale.py",
    "src/ml/repositories/base.py",
]

[tool.coverage.report]
fail_under = 78
show_missing = true
